# hypergraphND

./: .gitignore  CMakeLists.txt  plot.py
include/: hypergraph_ordering.hpp
src/: hypergraph_construction.cpp  hypergraph_decode.cpp  hypergraph_ordering.cpp  main.cpp  minimum_degree.cpp  minimum_degree_temp.cpp  partition.cpp  sparse_matrix.cpp
